<resources>
    <string name="app_name">Findine</string>
    <string name="map_id">8bbca962564de511</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="version_number">1.0.0</string>

    <string name="provide_feedback">Feedback</string>
    <string name="provide_suggestions">Provide Suggestions</string>
    <string name="rate_findine">Rate Findine</string>
</resources>