<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/provide_feedback">

        <Preference
            app:key="suggestion"
            app:title="@string/provide_suggestions" />
        <Preference
            app:key="rate"
            app:title="@string/rate_findine" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">

        <Preference
            app:key="version"
            app:summary="@string/version_number"
            app:title="@string/version"/>

    </PreferenceCategory>

</PreferenceScreen>